<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context="com.seffah.dinleyengnlk.view.Sign">

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textColor="@color/error" />

    <LinearLayout
        android:id="@+id/pass_curr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass_cur"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/current"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass2"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_margin="3dp"
            android:enabled="false"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_margin="3dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_info"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>
